<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_page"
    tools:context=".menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="100dp" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out" />

    <Button
        android:id="@+id/yt_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_tutorial" />

    <Button
        android:id="@+id/lo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/my_location"/>



    <Button
        android:id="@+id/helpline_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helpline_no"
     />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>